examples/test/testpolicy13473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13473
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key2: value21
      key28: value30
      key1: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value41
          key8: value48
          key37: value4
      podSelector:
        matchLabels:
          key17: value38
